alpm-types/src/version/snapshots/pkg_generic::parse_error_in_version_from_string@case_6_invalid_integer.snap
---
source: alpm-types/src/version/pkg_generic.rs
---
error: invalid package release
 | 
 | 1-foo:1
 |   ^ expected positive decimal integer
